trying to fix alignment

--- a/style.css
+++ b/style.css
@@ -9,6 +9,18 @@ h1{color:grey;font-family:verdana}
     align: center
 }
 
+#principal{
+    padding-left:70px;
+}
+
+#rate{
+    padding-left:70px;
+}
+
+#years{
+    padding-left:70px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
